<resources>
    <string name="app_name" translatable="false">CHESS - The Game</string>
    <string name="txtSinglePlayer">SINGLE PLAYER</string>
    <string name="txtChooseLanguage">Choose your language</string>
    <string name="txtMultiPlayer">MULTI PLAYER</string>
    <string name="txtEatenPieces">Conquered pieces</string>
    <string name="lblPlayer2">PLAYER 2</string>
    <string name="lblPlayer1">PLAYER 1</string>
    <string name="txtTitulo">CHESS</string>
    <string name="txtSaveCurrentGame">Save current game ?</string>
    <string name="preferences">Preferences</string>
    <string name="profile">Profile</string>
    <string name="create_profile">Create Profile</string>
    <string name="take_picture">Take picture</string>
    <string name="username" translatable="false">Username</string>
    <string name="profiles">Profiles</string>
    <string name="enable_clock">Enable clock</string>
    <string name="timer_p_game">Timer p/ game</string>
    <string name="lan">LAN</string>
    <string name="_1_vs_1" translatable="false">1 vs 1</string>
    <string name="winner">Winner</string>
    <string name="profileAtual">Profile:</string>
    <string name="credits">Credits</string>
    <string name="a21240085_dany_fajardo" translatable="false">a21240085 - Dany Fajardo</string>
    <string name="a21240062_filipa_sousa" translatable="false">a21240062 - Filipa Sousa</string>
    <string name="nome_li">Nome:</string>
    <string name="victories_li">Victories:</string>
    <string name="toast_profiel">Choose a profile to play with</string>
    <string name="savedGames">Saved games</string>
    <string name="general">General</string>
    <string name="ranking">Ranking</string>
    <string name="change_mode">Change Mode</string>
</resources>
