<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/rythmus_regular"
            android:text="@string/txtChooseLanguage"
            android:textSize="32sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageButton
                android:id="@+id/imgbtnPortuguese"
                android:layout_width="110px"
                android:layout_height="110px"
                android:layout_margin="10dp"
                android:background="@drawable/pt" />

            <ImageButton
                android:id="@+id/imgbtnEnglish"
                android:layout_width="110px"
                android:layout_height="110px"
                android:layout_margin="10dp"
                android:background="@drawable/uk" />

            <ImageButton
                android:id="@+id/imgbtnFrench"
                android:layout_width="110px"
                android:layout_height="110px"
                android:layout_margin="10dp"
                android:background="@drawable/fr" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/boxborder">
            <TextView
                android:id="@+id/txtCredits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/credits"
                android:textSize="32sp"
                android:fontFamily="@font/rythmus_regular"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txtCreditsDany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/a21240085_dany_fajardo"
                android:textSize="20sp"
                android:fontFamily="@font/rythmus_regular"
                />
            <TextView
                android:id="@+id/txtCreditsFilipa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/a21240062_filipa_sousa"
                android:textSize="20sp"
                android:fontFamily="@font/rythmus_regular"
                />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>