<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.isec.tp.amov.CreateProfile">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/rythmus_regular"
        android:text="@string/profile"
        android:textColor="@color/colorBrownSquare"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/imgViewPicture"
        app:layout_constraintEnd_toEndOf="@+id/imgViewPicture"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imgViewPicture"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imgViewPicture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/user"
        app:layout_constraintBottom_toTopOf="@+id/btnTakePhoto"
        app:layout_constraintEnd_toEndOf="@+id/btnTakePhoto"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnTakePhoto"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <!--<ImageView
        android:id="@+id/imgViewPicture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/user"
        app:layout_constraintBottom_toTopOf="@+id/btnTakePhoto"
        app:layout_constraintEnd_toEndOf="@+id/btnTakePhoto"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnTakePhoto"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />-->

    <EditText
        android:id="@+id/edtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="3"
        android:fontFamily="@font/rythmus_regular"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLength="15"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTakePhoto" />


    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:drawableStart="@android:drawable/ic_menu_camera"
        android:onClick="dispatchTakePictureIntent"
        android:text="@string/take_picture"
        app:layout_constraintBottom_toTopOf="@+id/edtName"
        app:layout_constraintEnd_toEndOf="@+id/edtName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/edtName"
        app:layout_constraintTop_toBottomOf="@+id/imgViewPicture" />


    <Button
        android:id="@+id/btnCreateProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:drawableStart="@android:drawable/ic_input_add"
        android:onClick="onCreateProfile"
        android:text="@string/create_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtName" />

</android.support.constraint.ConstraintLayout>
